2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to render selected items with right foreground colors.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Updated short cut keys for "Mark Scrollback" and "Clear Mark" in the log menu.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Assigned cmd+opt+shift+R to "Mark All as Read and Clear All Marks".

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Now mIRC color effects can be styled in css.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Now the color of highlight indicators refer to theme settings.
	Updated themes.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Removed an unnecessary file.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Assigned cmd+W to "Close Current Panel" when the main window is active.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to show the paste dialog on opt-return.
	Changed to select 'privmsg' as the default syntax when the paste dialog is not for paste.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Tweaked javascript.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Renamed "Copy Console Log as HTML" to "Copy Log as HTML" in the context menu.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Moved "Copy Console Log as HTML" to context menu of the console.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the input text field should be scrolled on nick completion.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Removed old class names from html elements on log views.
	Added "text" or "event" html classes for lines on log views.
	Added "Copy Log as HTML" menus to the log context menu.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Implemented drawing highlight indicators on a vertical scroller of log views.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Now we can rearrange servers and channels on the server tree.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>
